--- a/app/views/creditcards/new.html.haml
+++ b/app/views/creditcards/new.html.haml
@@ -1,3 +1,4 @@
+- required = '必須'
 .header-signup
   .header-signup__left
     = link_to root_path do
@@ -28,51 +29,46 @@
   %section.l-single-container
     %h2.l-single-inner_registration
       支払い方法
-      -# = form_for @user, url: mypage_index_path, method: :get do |f|
-    - required = '必須'
-    .creditcard_information
-      .field
-        .field-label
-          -# = f.label :"カード番号"
-          %h4 カード番号
-          %span.min #{required}
-          %input.input-text_cardnum{:name => "cardnumber", :placeholder => "半角数字のみ", :value => ""}/
-          %div
-            =image_tag "visa.svg", height: '20', width: '40'
-            =image_tag "master-card.svg", height: '20', width: '40'
-            =image_tag "saison-card.svg", height: '20', width: '35'
-            =image_tag "jcb.svg", height: '20', width: '40'
-            =image_tag "american_express.svg", height: '20', width: '20'
-            =image_tag "diners_logo_white.gif", height: '20', width: '30'
-            =image_tag "discover.svg", height: '20', width: '40'
-        -# .field-input
-          -# = f.text_field : ,placeholder: '半角数字のみ'
-      .field-creditcard
-        .field-label
-          %h4 有効期限
-          -# = f.label :"有効期限"
-          %span.min #{required}
-          -# .field-input
-        .field-input-expiring
-          %input.input-text{:name => "expiring date", :placeholder => "--", :value => ""}/
-          -# = f.text_field :
-          -# spanはform_for切り替え時にセレクトの横に移動すると思います
-          %span 月
-          %input.input-text{:name => "expiring date", :placeholder => "--", :value => ""}/
-          -# = f.text_field :
-          -# spanはform_for切り替え時にセレクトの横に移動すると思います
-          %span 年
-      .field-creditcard
-        .field-label
-          %h4 セキュリティコード
-          -# = f.label :"セキュリティコード"
-          %span.min #{required}
-          %input.input-text_cardnum{:name => "security code", :placeholder => "カード背面４桁もしくは３桁の番号", :value => ""}/
-        -# .field-input
-          -# = f.text_field : ,placeholder: 'カード背面４桁もしくは３桁の番号'
-      .field-creditcard
-        .firld-input
-          %button.btn-default.btn-red 次へ進む
-          -# = f.submit :"次へ進む", class: "next_submit"
-      .destory_wall
+    = form_tag(pay_creditcards_path, method: :post, id:'charge-form',  name: "inputForm") do
+      .creditcard_information
+        .field-creditcard
+          .field-label
+            %label カード番号
+            %span.min #{required}
+            = text_field_tag "number", "", class:"input-text_cardnum", placeholder:'半角数字のみ', type: "text", id: "card_number"
+            %div
+              =image_tag "visa.svg", height: '20', width: '40'
+              =image_tag "master-card.svg", height: '20', width: '40'
+              =image_tag "saison-card.svg", height: '20', width: '35'
+              =image_tag "jcb.svg", height: '20', width: '40'
+              =image_tag "american_express.svg", height: '20', width: '20'
+              =image_tag "diners_logo_white.gif", height: '20', width: '30'
+              =image_tag "discover.svg", height: '20', width: '40'
+        .field-creditcard
+          .field-label
+            %label 有効期限
+            %span.min #{required}
+            .field-input
+          .field-input-expiring
+            .select-wrapper
+              = select_tag "exp_month", options_from_collection_for_select(@month, :value, :name), class:"input-text", id: "exp_month"
+              .select-arrow
+                %i.fas.fa-chevron-down
+            %span.exp-date 月
+            .select-wrapper
+              = select_tag "exp_year", options_from_collection_for_select(@year, :value, :name), class:"input-text", id: "exp_year"
+              .select-arrow
+                %i.fas.fa-chevron-down
+            %span.exp-date 年
+        .field-creditcard
+          .field-label
+            %label セキュリティコード
+            %span.min #{required}
+          .field-input
+            = text_field_tag "cvc", "", class:"input-text_cardnum", placeholder: 'カード背面４桁もしくは３桁の番号',id: "cvc"
+        .field-creditcard
+          .field-input
+            #card_token
+            = submit_tag "次へ進む" , name:"next_submit", class:"creditcard-submit",id: "token_submit"
+        .destory_wall
 = render 'signups/footer'
