--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,5 +79,5 @@
 @import 'addresses/new.scss';
 @import 'creditcards/new.scss';
 @import "signups/signup.scss";
-@import "items/index";
+@import "items/show";
 @import "items/chat"
