--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -42,14 +42,14 @@
         border: 0.1rem solid #f5f5f5;
         height: 100%;
         font-size: 1.4rem;
-        th {
+        .item-th {
           width: 39%;
           text-align: left;
           font-weight: 400;
           background-color: #fafafa;
           padding: 0.8rem;
         }
-        td {
+        .item-td {
           width: 61%;
           padding: 0.8rem;
         }
