--- a/app/assets/stylesheets/items/sell.scss
+++ b/app/assets/stylesheets/items/sell.scss
@@ -10,28 +10,28 @@
     padding-top: 4rem;
   }
 }
-
 .sell-main {
   width: 70rem;
   margin: 0 auto;
   background: #fff;
-  .sell-head {
+  .sell-form__header {
     text-align: center;
     font-size: 2.2rem;
     padding: 3.2rem 1.6rem;
     border-bottom: 0.1rem solid #f5f5f5;
     line-height: 1.5;
   }
-  .sell-image {
+  .sell-form-container {
     padding: 4rem;
     border-bottom: 0.1rem solid #f5f5f5;
     &__wrapper {
       width: 62rem;
-      &--subject {
+      overflow: auto;
+      &--label {
         font-size: 1.4rem;
         font-weight: bold;
       }
-      &--essential {
+      &--require {
         margin-left: 0.8rem;
         padding: 0.2rem 0.4rem;
         border-radius: 0.2rem;
@@ -47,34 +47,48 @@
         margin-top: 0.8rem;
         line-height: 1.5;
       }
-      .drop-area {
+      .dropzone-container {
         position: relative;
         margin: 1.6rem auto 0;
-        .dropzone {
+        overflow: auto;
+        font-weight: 200;
+        text-align: center;
+        .input_area {
+          display: none;
+        }
+        .dropzone-area {
           width: 100%;
           min-height: 16.2rem;
           background: #f5f5f5;
           border: 0.1rem dashed #ccc;
           cursor: pointer;
+          line-height: 16.2rem;
+          float: right;
         }
-        &__text {
-          position: absolute;
-          top: 50%;
-          left: 1.6rem;
-          right: 1.6rem;
-          text-align: center;
-          font-size: 1.4rem;
-          line-height: 1.5;
-          -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-          pointer-events: none;
-          white-space: pre-wrap;
-          word-wrap: break-word;
+        .dropzone-area2 {
+          @extend .dropzone-area;
+          display: none;
+        }
+        .img_view {
+          background-color: #f5f5f5;
+          height: 16.2rem;
+          width: 12.4rem;
+          float: left;
+          
+          .btn.delete {
+            text-align: center;
+            margin-top:0.8rem;
+            color: #0099e8;
+          }
+          img{
+            height: 12.4rem;
+            width: 12.4rem;
+            clear: both;
+          }
         }
       }
     }
   }
-
   .sell-item {
     padding: 0 4rem 4rem;
     border-bottom: 0.1rem solid #f5f5f5;
@@ -85,10 +99,10 @@
         font-weight: bold;
       }
       &--essential {
-        @extend .sell-image__wrapper--essential;
+        @extend .sell-form-container__wrapper--require;
       }
       &--optional {
-        @extend .sell-image__wrapper--essential;
+        @extend .sell-form-container__wrapper--require;
         background: #ccc;
       }
       &--name {
@@ -156,13 +170,14 @@
         font-weight: bold;
       }
       .select-essential {
-        @extend .sell-image__wrapper--essential;
+        @extend .sell-form-container__wrapper--require;
       }
 
       .box-wrapper,
       .parent-wrapper,
       .children-wrapper,
-      .grandchildren-wrapper {
+      .grandchildren-wrapper,
+      .deliveryway-select-wrapper{
         position: relative;
         .select-box {
           @extend .sell-item__form--name;
@@ -172,7 +187,8 @@
         }
         #select-parent-category,
         #select-children-category,
-        #select-grandchildren-category {
+        #select-grandchildren-category,
+        #select-delivery-way{
           @extend .select-box;
         }
         .select-arrow {
@@ -221,7 +237,7 @@
               font-weight: bold;
             }
             .input-essential {
-              @extend .sell-image__wrapper--essential;
+              @extend .sell-form-container__wrapper--require;
               line-height: 4.8rem;
             }
           }
@@ -328,4 +344,8 @@
 
 .sell-select__group:first-child {
   margin-top: 0;
+}
+
+.deliveryway-wrapper{
+  margin-top: 4rem;
 }
