画像サイズをscssに記述

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@
 @import "mypages/purchase_purchased.scss";
 
 //signupus
-@import "signups/signup.scss";
+// @import "signups/signup.scss";
 @import "signups/step1.scss";
 @import "signups/step2.scss";
 @import "signups/done.scss";
@@ -78,6 +78,6 @@
 @import 'signups/step1.scss';
 @import 'addresses/new.scss';
 @import 'creditcards/new.scss';
-@import "signups/signup.scss";
+// @import "signups/signup.scss";
 @import "items/show";
 @import "items/chat"
