--- a/app/views/items/_chat.html.haml
+++ b/app/views/items/_chat.html.haml
@@ -4,7 +4,7 @@
     - @chats.each do |chat|
       %li.item-chat-area__library--board
         %figure.item-user-image
-          = image_tag chat.user.image , height: '40', width: '40'
+          = image_tag chat.user.image , class: "item-user-image-size"
           %figcaption.item-user-name
             = chat.user.nickname
         .item-chat-message
