--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -8,10 +8,10 @@
     .item-detail-content__information--pictures
       .item-detail-phone-big
         - @item.images.first(1).each do |image|
-          = image_tag image.image, class: ".item-detail-phone-big__main--image", height: '300', width: '300'
+          = image_tag image.image, class: "item-detail-phone-big-main"
       .item-detail-phone-cells
         - @item.images.each do |image|
-          =image_tag image.image, class: "item-detail-phone-cells__bit", height: '60', width: '60'
+          =image_tag image.image, class: "item-detail-phone-cells-bits"
     .item-detail-content__information--list
       %table.item-detail-table(border = "1")
         %tr
