haml微修正a to p tag

--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -29,7 +29,7 @@
                     .MainMenu__CategoryLists__List__All
                         - @category_rankings.each do |category|
                             .MainMenu__CategoryLists__List__All__list
-                                %a.category-list 
+                                %p.category-list 
                                     = category.name
 
 
@@ -60,7 +60,7 @@
                     .MainMenu__BrandLists__List__All
                         - @brand_rankings.each do |brand|
                             .MainMenu__BrandLists__List__All__list
-                                %a.brand-list 
+                                %p.brand-list 
                                     = brand.name
 
 
