--- a/app/views/mypages/listing.html.haml
+++ b/app/views/mypages/listing.html.haml
@@ -1,5 +1,7 @@
 %body
   = render '/homes/header'
+  - breadcrumb :listing
+  = render "layouts/breadcrumbs"
   .main
     .mypage-container__listings
 
