--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -11,9 +11,8 @@
   height: 10rem;
   width: 100%;
   padding: 1rem 15rem;
-
   background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.18) 0 0.2rem 0.4rem;
+  border-bottom: 0.1rem solid #f5f5f5;
   position: relative;
   z-index: 1;
 }
