--- a/app/views/mypages/completed.html.haml
+++ b/app/views/mypages/completed.html.haml
@@ -1,5 +1,7 @@
 %body
   = render '/homes/header'
+  -breadcrumb :completed
+  =render "layouts/breadcrumbs"
   .main
     .mypage-container__listings
 
