--- a/app/views/mypages/index.html.haml
+++ b/app/views/mypages/index.html.haml
@@ -1,6 +1,8 @@
 -# haml-lint:disable FinalNewline
 %body
   = render '/homes/header'
+  - breadcrumb :mypage
+  = render "layouts/breadcrumbs"
   .main
     .mypage-container
       .mypage-header
