--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,6 +1,6 @@
-.header-a
-  = render '/homes/header'
-.item-detail-content
+-# .header-a
+-#   = render '/homes/header'
+-# .item-detail-content
 
   %h1.item-detail-content__title
     = @item.name
@@ -97,5 +97,5 @@
           %span.item-lock__safety あんしん・あんぜんへの取り組み
 -# ここまでが商品の詳細画面です〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜〜
 
-= render 'chat'
-= render 'homes/footer'
+-# = render 'chat'
+-# = render 'homes/footer'
